FIX: correctly homogenizes panels min width
`.chat-channel` had `300px` min width, when `.chat-drawer` was `250px`, resulting in overflowing channel when in drawer. This commits ensures the limits are always set at `250px`.

--- a/plugins/chat/assets/stylesheets/common/chat-channel.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-channel.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
   grid-area: main;
   width: 100%;
-  min-width: 300px;
+  min-width: 250px;
 
   .open-drawer-btn {
     color: var(--primary-low-mid);
